<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical"
    tools:context=".MainActivity" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    >
	    <TextView
	        android:id="@+id/tel_label"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:text="@string/tel_label" />
		<EditText 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/mobile_input"
		    android:layout_toRightOf="@id/tel_label"
		    android:layout_alignTop="@id/tel_label"
		    android:layout_marginLeft="5dp"
		    />
    
	</RelativeLayout>
		<Button 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_name"
		    android:id="@+id/tel_btn"
		    />	

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/filename"
	    />
	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/filename"
	    
	    />
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/filecontent"
	    />
	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/filecontent"
	    
	    />
	<Button 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/file_btn_name"
		    android:id="@+id/file_btn"
		    />	
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/imagepath"
	    />
	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/imagepath"
	    android:text="http://m.baidu.com/static/index/l.gif"
	    />
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/image_path_btn"
	    android:text="@string/image_path_btn"
	    />
	<ImageView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/image_path_show"
	    />
		    
<LinearLayout
      android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView 
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="姓名"
        />
	<TextView 
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="电话"
        />
	<TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="存款"
        />
</LinearLayout>	



	
	<ListView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:id="@+id/listView"
	    />

	
</LinearLayout>
